# opendpp-conformance-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: USER_JOURNEY.md
profiles/battery-pass/: NOTICE.md  README.md  profile.yaml
profiles/battery-pass/contexts/: CarbonFootprintForBatteries-ld.json  Circularity-ld.json  Circularity.ttl  GeneralProductInformation-ld.json  Labeling-ld.json  MaterialComposition-ld.json  MaterialComposition.ttl  PerformanceAndDurability-ld.json  SupplyChainDueDiligence-ld.json
profiles/battery-pass/openapi/: Circularity_openapi3_0.json
profiles/battery-pass/rules/: battery_policy.yaml
profiles/battery-pass/schemas/: CarbonFootprintForBatteries-schema.json  Circularity-schema.json  Labeling-schema.json  MaterialComposition-schema.json  PerformanceAndDurability-schema.json  SupplyChainDueDiligence-schema.json  battery_pass.schema.json
profiles/battery-pass/shapes/: battery_pass.shapes.ttl  battery_pass_minimal.shapes.ttl
profiles/battery-pass/testvectors/positive/: CarbonFootprintForBatteries-payload.json  Circularity.json  Labeling-payload.json  MaterialComposition-payload.json  PerformanceAndDurability-payload.json  SupplyChainDueDiligence-payload.json
profiles/espr-core/: profile.yaml
profiles/espr-core/rules/: core_policy.yaml
profiles/espr-core/schemas/: dpp_core.schema.json
schemas/: report.schema.json
src/opendpp/: cli.py
src/opendpp/core/: __init__.py  artifact.py  codec.py  engine.py  report.py
src/opendpp/fetch/: __init__.py  http.py
src/opendpp/normalize/: jsonld.py
src/opendpp/policy/: espr_core.py
src/opendpp/profiles/: loader.py
src/opendpp/reporting/: html.py
src/opendpp/reporting/templates/: report.html.j2
src/opendpp/resolve/: __init__.py  gs1_digital_link.py  parse_input.py
src/opendpp/trust/: did.py  issue.py  jwt_vc.py
tests/: test_battery_profile.py  test_engine.py  test_resolve.py
(+6 files in other folders)
